clusters/default/infra/apps/zot/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zot
  labels:
    app.kubernetes.io/name: zot
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
    tier: application
