clusters/default/infra/apps/zot/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: zot-nodeport
  namespace: zot
  labels:
    app.kubernetes.io/name: zot
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: zot
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30050
