clusters/default/infra/apps/zot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zot
  namespace: zot
  labels:
    app.kubernetes.io/name: zot
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: zot
  ports:
    - name: http
      port: 5000
      targetPort: 5000
