clusters/default/infra/apps/zot/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zot-network-policy
  namespace: zot
  labels:
    app.kubernetes.io/name: zot
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: zot
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: rathole
      ports:
        - port: 5000
          protocol: TCP
